# Cuda_Chess_Combat

./: .gitignore  COMBAT.md  README.md
combat_shipping/: .gitignore  README.md
combat_shipping/bridges/: arbiter_referee.mjs  cuda_referee.py  playgame_lifted.mjs
combat_shipping/broker_integration/: cuda_arbiter_daemon.py  cuda_arbiter_daemon_batched.py  cuda_play_game.mjs
combat_shipping/harness/: pgn_stream.py  replay_shadow.py  run_comparison.sh
combat_shipping/live_arbiter/: gpu_state.py  live_match.py  run_arbiter_native.mjs
combat_shipping/live_compare/: compare.py  run.sh
combat_shipping/results/: ACCURACY_REPORT_2026-04-29.md
cuda/engine/: .gitignore  Makefile  arena_gpu_smoke.sh  arena_smoke.sh  attacks.cu  attacks.cuh  bitboard.cuh  build_engine.sh  cfx_batch.cu  cfx_smoke.cu  check_pos4.sh  coord3d.cuh  coord3d_smoke.cu  engine.cu  engine_types.h  eval.cu  eval.cuh  eval_service.cu  eval_service.cuh  fight_arena.py  gpu_arena_min.py  make_unmake.cu  make_unmake.cuh  movegen.cu  movegen.cuh  parity_compare.py  parity_test.py  queues.cuh  refcuda.cu  refcuda_smoke.c  run_tests.sh  scheduler.cu  scheduler.cuh  search.cu  search.cuh  time.cu  time.cuh  trust_test.py  tt.cu  tt.cuh  (+7 more)
cuda/engine/tests/: test_makeunmake_symmetry.cu  test_perft.cu  test_tt.cu  test_zobrist.cu
rust/: Cargo.toml
rust/dojo-ref/: Cargo.toml  build.rs
rust/dojo-ref-py/: Cargo.toml  pyproject.toml
rust/dojo-ref-py/src/: lib.rs
rust/dojo-ref/examples/: match.rs  play_game.rs  smoke.rs
rust/dojo-ref/src/: lib.rs
