[package]
name = "dojo-ref-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for the dojo-ref GPU chess referee"
license = "Apache-2.0"

[lib]
name = "dojo_ref"
crate-type = ["cdylib"]

[dependencies]
dojoref = { package = "dojo-ref", path = "../dojo-ref" }
pyo3 = { version = "0.22", features = ["extension-module"] }
