[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "dojo_ref"
version = "0.1.0"
description = "Python bindings for cuda-dojo's GPU chess referee"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
